--- a/user-guide/DITA_v1-2-support.dita
+++ b/user-guide/DITA_v1-2-support.dita
@@ -4,11 +4,12 @@
 
 <concept id="dita1.2specification" xml:lang="en-US">
   <title>DITA 1.2 support</title>
-  <shortdesc>DITA Open Toolkit <keyword keyref="release"/> supports the DITA 1.2 specification. Initial support for this
-    specification was added in version 1.5 of the toolkit; versions 1.5.1 and 1.5.2 contain minor modifications to keep
-    up with the latest drafts. The specification itself was approved at approximately the same time as DITA-OT 1.5.2,
-    which contained the final versions of the DTD and Schemas. DITA-OT 1.6 updated the DITA 1.2 XSDs to address minor
-    errata in the standard; the DTDs remain up to date.</shortdesc>
+  <shortdesc>DITA OT <keyword keyref="release"/> supports the DITA 1.2 specification. Initial
+    support for this specification was added in version 1.5 of the toolkit; versions 1.5.1 and 1.5.2
+    contain minor modifications to keep up with the latest drafts. The specification itself was
+    approved at approximately the same time as DITA-OT 1.5.2, which contained the final versions of
+    the DTD and Schemas. DITA-OT 1.6 updated the DITA 1.2 XSDs to address minor errata in the
+    standard; the DTDs remain up to date.</shortdesc>
   <conbody>
     <p>Earlier versions of the DITA Open Toolkit contained a subset of the specification material, including
       descriptions of each DITA element. This material was shipped in source, CHM and PDF format. This was possible in
